syntax = "proto3";

service Style {
    rpc check_style(StyleRequest) returns (StyleResponse) {};
}

message StyleRequest {
    string path = 1;
    repeated string styles = 2;
}

message StyleResponse {
    bool return_value = 1;
}